     * Something changed / fixed

v.0.5dev (ongoing development)
 + config file support in lcdproc client (Andrew Foss)
 * install server & client config files in $(sysconfdir)
 + new client lcdvc: virtual console on LCD
 * convert adv_bignum library to bitwise set_char()
 * adapt drivers to modified bignum library:
   + CFontz633
   + CFontzPacket
   + hd44780
   + IOWarrior
   + serialVFD
 + add iface screen(s) to lcdproc client (Andrew Foss)
 * update sample Perl clients
 * fix LCDd crash on shutdown of clients using "menu_set_main" (Andrew Foss)
 * fix sock_connect() to allow 0 as legal socket (Frederick Nacino)
 * improve serialVFD driver (Stefan Herdler)

v0.5.0
This version has split off from unstable-0.4.3. Includes major changes.
 + LCDd now does dynamic loading of driver modules
 * New API in use
 + LCDd will use fill-in functions for drivers that don't support a certain
   function. Available for: vbar, hbar, bignum, heartbeat, icon, cursor.
 * Server internal functions cleaned up, moved to other files etc.
 * Menu system rewritten
 + Client-supplied menus are now supported
 * Key support improved: now keys have descriptive names, not just a letter
   anymore.
 + Reloading of configuration and drivers by sending a SIGHUP. Probably
   needs improvement ;)
 * HD44780 output register support on winamp wiring
 * Reporting levels are now used more consistently
 + lcdexec client added
 * Display update frequency is now exactly 8Hz. Key scan frequency increased
   to 32Hz.
 * Priority scheme changed. Priority classes are now used, that indicate what
   kind of a screen we're dealing with. More useful for interactive clients.
 + better support for operating systems other than Linux: *BSD, Darwin
 + menu support for lcdproc client (configure option)
 + Added CFontz633 driver for CrytalFontz CFA633
 + Added CFontzPacket driver fro CrystalFontz CFA-633, CFA-631, CFA-635
 + Added glcdlib meta-driver for all LCDs supported by graphlcd-base