@@ -439,5 +439,12 @@ int machine_get_uptime(double *up, double *idle)
 	return(TRUE);
 }
 
+/* Get network statistics */
+int machine_get_iface_stats (IfaceInfo *interface)
+{
+	/* Implementation missing */
+	return 0;
+}
+
 #endif /* sun */
 
